--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@uploadthing/react": "^7.3.3",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
-    "next": "14.2.33",
+    "next": "^16.0.8",
     "next-auth": "^5.0.0-beta.30",
     "razorpay": "^2.9.6",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.4.0",
+    "uploadthing": "^7.7.4",
     "zod": "^4.1.13"
   },
   "devDependencies": {
@@ -28,7 +31,7 @@
     "@types/react-dom": "^18",
     "dotenv": "^17.2.3",
     "eslint": "^8",
-    "eslint-config-next": "14.2.33",
+    "eslint-config-next": "^16.0.8",
     "postcss": "^8",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
